...

    <ScrollView
        android:id="@+id/settings_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
...

            <RelativeLayout
                android:id="@+id/rlFurigana"
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_width"
...

                <TextView
                    android:id="@+id/tvFurigana"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rlHideEnglish"
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_width"
...

                <TextView
                    android:id="@+id/tvHideEnglish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rlBunnyMode"
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_width"
...

                <TextView
                    android:id="@+id/tvBunnyMode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

            <RelativeLayout
                android:id="@+id/rlSubscription"
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_width"
...

            <RelativeLayout
                android:id="@+id/rlCommunity"
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_width"
...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/community"
                    android:textColor="@color/colorBlue"
                    android:layout_centerVertical="true"
...

            <RelativeLayout
                android:id="@+id/rlAbout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_width"
...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about"
                    android:textColor="@color/colorBlue"
                    android:layout_centerVertical="true"
...

            <RelativeLayout
                android:id="@+id/rlContact"
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_width"
...
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:text="@string/contact"
                    android:textColor="@color/colorBlue"
                    android:textSize="16sp"/>
...

            <RelativeLayout
                android:id="@+id/rlPrivacy"
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_width"
...
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:text="@string/privacy"
                    android:textColor="@color/colorBlue"
                    android:textSize="16sp"/>
...

            <RelativeLayout
                android:id="@+id/rlTerms"
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_width"
...
                    android:layout_alignParentStart="true"
                    android:textColor="@color/colorBlue"
                    android:text="@string/terms_and_conditions"
                    android:textSize="16sp"/>

...

            <RelativeLayout
                android:id="@+id/rlLogout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_width"
...
                    android:layout_centerVertical="true"
                    android:textColor="@color/colorBlue"
                    android:text="@string/logout"
                    android:textSize="16sp"/>

...
