<resources>
    <string name="app_name">Bunpro SRS</string>
    <string name="app_greetings">Welcome to the Bunpro Android application.</string>
    <string name="app_definition">Bunpro is a website that helps learning japanese grammar. With a concise learning roadmap and with the use of SRS flashcards, Bunpro helps you to make japanese grammar simple.</string>
    <string name="app_invitation">To be able to use Bunpro, you will need to create an account first. Head to the official website!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="privacy">Privacy</string>
    <string name="furigana">Furigana</string>
    <string name="hide_english">Hide English</string>
    <string name="bunny_mode">Bunny Mode</string>
    <string name="setting_description">When Bunny Mode is active, you\'ll advance to the next review without further confirmation if your answer was correct.</string>
    <string name="about">About</string>
    <string name="contact">Contact</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="logout">Logout</string>
    <string name="subscription">Subscription</string>
    <string name="status">Status</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="search_hint">Search Grammar</string>
    <string name="all">All</string>
    <string name="unlearned">Unlearned</string>
    <string name="learned">Learned</string>
    <string name="copy_kanji">Copy Kanji</string>
    <string name="copy_kana">Copy Kana</string>
    <string name="copy_japanese">Copy Japanese</string>
    <string name="copy_english">Copy English</string>
    <string name="back">Back</string>
    <string name="kanji_readings">Kanji Readings</string>
    <string name="copy_meaning">Copy Meaning</string>
    <string name="readings">Readings</string>
    <string name="examples">Examples</string>
    <string name="show_english">Show English</string>
    <string name="next_reviews">Next Reviews</string>
    <string name="structure">Structure</string>
    <string name="todo">TODO</string>
    <string name="remove_from_reviews">Remove from Reviews</string>
    <string name="reset_review_progress">Reset Review Progress</string>
    <string name="home">Home</string>
    <string name="community">Community</string>
    <string name="now">Now</string>
    <string name="test">&lt;b>{日本語;にほんご}が{簡単;かんたん}だよ。&lt;/b>&lt;br/>&lt;i>{日本語;にほんご}は、{主;しゅ}に{日本;にほん}{国内;こくない}や{日本人;にほんじん}{同士;どうし}の{間;あいだ}で{使;つか}われている{言語;げんご}である。&lt;/i>{日本;にほん}は{法令;ほうれい}によって「{公用語;こうようご}」を{規定;きてい}していないが、{法令;ほうれい}その{他;た}の{公用文;こうようぶん}は{全て;すべて}{日本語;にほんご}で{記述;きじゅつ}され、{各種;かくしゅ}{法令;ほうれい}において{日本語;にほんご}を{用いる;もちいる}ことが{定め;さだめ}られるなど{事実上;じじつじょう}の{公用語;こうようご}となっており、{学校;がっこう}{教育;きょういく}の「{国語;こくご}」でも{教え;おしえ}られる。&lt;br />&lt;b>{使用;しよう}{人口;じんこう}について{正確;せいかく}な{統計;とうけい}はないが、{日本;にほん}{国内;こくない}の{人口;じんこう}、および{日本;にほん}{国外;こくがい}に{住む;すむ}{日本人;にほんじん}や{日系人;にっけいじん}、{日本;にほん}がかつて{統治;とうち}した{地域;ちいき}の{一部;いちぶ}{じゅうみん;}など、{約;やく}1{億;おく}3{千万;せんまん}{人;ひと}{以上;いじょう}と{考え;かんがえ}られている。&lt;i>{統計;とうけい}によって{前後;ぜんご}する{可能性;かのうせい}はあるが、この{数;かず}は{世界;せいかい}の{母語話者;ぼごわしゃ}{数;すう}で{上位;じょうい}10{位;い}{以内;いない}に{入る;はいる}{人数;にんずう}である。&lt;br/>&lt;/i>&lt;/b>&lt;b>&lt;i>{日本;にほん}で{生まれ;うまれ}{育った;そだった}ほとんどの{人;ひと}は、{日本語;にほんご}を{母語;ぼご}とする。&lt;/i>{日本語;にほんご}の{文法;ぶんぽう}{体系;たいけい}や{音韻;おんいん}{体系;たいけい}を{反映;はんえい}する{手話;しゅわ}として{日本語;にほんご}{対応;たいおう}{手話;しゅわ}がある。\n&lt;/b>&lt;i>2013{年;ねん}1{月;がつ}{現在;げんざい}、インターネット{上;じょう}の{言語;げんご}{使用者;しようしゃ}{数;すう}は、{英語;えいご}、{中国語;ちゅうごくご}、スペイン{語;ご}、アラビア{語;ご}、ポルトガル{語;ご}に{次いで;ついで}6{番目;ばんめ}に{多い;おおい}。&lt;/i></string>
    <string name="press_again_to_exit">Press again to exit</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="always">Always</string>
    <string name="never">Never</string>
    <string name="wanikani">WaniKani</string>
    <string name="settings_update">Updated user settings</string>
    <string name="cram">Cram</string>
    <string name="study">Study</string>
    <string name="bunpro">Bunpro</string>
    <string name="loading_progressing">Loading...</string>
    <string name="add_to_reviews">Add to reviews</string>
    <string name="reset_or_remove">Reset/Remove</string>
    <string name="refresh_database">Refresh database</string>
    <string name="refreshing_database">Refreshing local database... This might take a while</string>
    <string name="on_back_button_title">Closing session</string>
    <string name="on_back_button_message">Are you sure you want to end the current session?</string>
</resources>
